--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Tab Navigator",
     "version": "1.0",
-    "description": "Switch tabs using Ctrl + Right/Left arrows.",
+    "description": "Switch tabs using Ctrl/Cmd + Right/Left arrows.",
     "permissions": ["tabs"],
     "background": {
       "service_worker": "background.js"
@@ -10,13 +10,15 @@
     "commands": {
       "next-tab": {
         "suggested_key": {
-          "default": "Ctrl+Right"
+          "default": "Ctrl+Right",
+          "mac": "Command+Right"
         },
         "description": "Switch to the next tab"
       },
       "previous-tab": {
         "suggested_key": {
-          "default": "Ctrl+Left"
+          "default": "Ctrl+Left",
+          "mac": "Command+Left"
         },
         "description": "Switch to the previous tab"
       }
